# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("vim") {
  sources = [
    "src/alloc.h",
    "src/arabic.c",
    "src/arabic.h",
    "src/ascii.h",
    "src/auto/config.h",
    "src/blowfish.c",
    "src/buffer.c",
    "src/channel.c",
    "src/charset.c",
    "src/crypt.c",
    "src/crypt_zip.c",
    "src/dict.c",
    "src/diff.c",
    "src/digraph.c",
    "src/dlldata.c",
    "src/dosinst.c",
    "src/dosinst.h",
    "src/edit.c",
    "src/eval.c",
    "src/evalfunc.c",
    "src/ex_cmds.c",
    "src/ex_cmds.h",
    "src/ex_cmds2.c",
    "src/ex_docmd.c",
    "src/ex_eval.c",
    "src/ex_getln.c",
    "src/farsi.c",
    "src/farsi.h",
    "src/feature.h",
    "src/fileio.c",
    "src/fold.c",
    "src/getchar.c",
    "src/glbl_ime.h",
    "src/globals.h",
    "src/hangulin.c",
    "src/hardcopy.c",
    "src/hashtab.c",
    "src/iid_ole.c",
    "src/integration.c",
    "src/integration.h",
    "src/iscygpty.c",
    "src/iscygpty.h",
    "src/json.c",
    "src/json_test.c",
    "src/keymap.h",
    "src/list.c",
    "src/macros.h",
    "src/main.c",
    "src/mark.c",
    "src/mbyte.c",
    "src/memfile.c",
    "src/memfile_test.c",
    "src/memline.c",
    "src/menu.c",
    "src/message.c",
    "src/message_test.c",
    "src/misc1.c",
    "src/misc2.c",
    "src/move.c",
    "src/nbdebug.c",
    "src/nbdebug.h",
    "src/netbeans.c",
    "src/normal.c",
    "src/ops.c",
    "src/option.c",
    "src/option.h",
    "src/os_amiga.c",
    "src/os_amiga.h",
    "src/os_beos.c",
    "src/os_beos.h",
    "src/os_dos.h",
    "src/os_mac.h",
    "src/os_mac_conv.c",
    "src/os_mint.h",
    "src/os_mswin.c",
    "src/os_qnx.c",
    "src/os_qnx.h",
    "src/os_unix.c",
    "src/os_unix.h",
    "src/os_unixx.h",
    "src/os_vms.c",
    "src/os_vms_conf.h",
    "src/os_vms_mms.c",
    "src/os_w32dll.c",
    "src/os_w32exe.c",
    "src/os_win32.c",
    "src/os_win32.h",
    "src/po/sjiscorr.c",
    "src/popupmnu.c",
    "src/proto.h",
    "src/pty.c",
    "src/quickfix.c",
    "src/regexp.c",
    "src/regexp.h",
    "src/regexp_nfa.c",
    "src/screen.c",
    "src/search.c",
    "src/sha256.c",
    "src/spell.c",
    "src/spell.h",
    "src/spellfile.c",
    "src/structs.h",
    "src/syntax.c",
    "src/tag.c",
    "src/tee/tee.c",
    "src/term.c",
    "src/term.h",
    "src/termlib.c",
    "src/ui.c",
    "src/undo.c",
    "src/uninstal.c",
    "src/userfunc.c",
    "src/version.c",
    "src/version.h",
    "src/vim.h",
    "src/vimio.h",
    "src/vimrun.c",
    "src/VisVim/Commands.h",
    "src/VisVim/DSAddIn.h",
    "src/VisVim/OleAut.h",
    "src/VisVim/Resource.h",
    "src/VisVim/StdAfx.h",
    "src/VisVim/VisVim.h",
    "src/winclip.c",
    "src/window.c",
    "src/workshop.c",
    "src/workshop.h",
    "src/wsdebug.c",
    "src/wsdebug.h",
    "src/xpm/include/simx.h",
    "src/xpm/include/xpm.h",
    "src/xpm_w32.c",
    "src/xpm_w32.h",
    "src/xxd/xxd.c",
  ]
}
